--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
 		"type_traits": "cpp",
 		"cmath": "c",
 		"cstdlib": "c",
-		"math.h": "c"
+		"math.h": "c",
+		"filesystem": "cpp",
+		"chrono": "cpp"
 	}
 }
